# 4sem_OOTPiSP

./: README.md
lab1/rep/_INCLUDES/main/: content.tex  option5_task1.tex  option5_task2.tex  task.tex  task1.tex  task2.tex
lab1/rep/_STYLES/: title_variables.sty
lab1/rep/main/: main.tex
lab1/report/: Makefile  ООТПиСП_ПО-4_Галанин_лаб1.tex
lab1/report/_INCLUDES/main/: content.tex  task1.tex  task2.tex
lab1/report/_STYLES/: title_variables.sty
lab1/src/option5-task1/src/: main.cpp
lab2/rep/_INCLUDES/main/: option5.tex  option5_task.tex  task.tex
lab2/rep/_STYLES/: title_variables.sty
lab2/rep/main/: main.tex
lab2/report/: Makefile  ООТПиСП_ПО-4_Галанин_лаб2.tex
lab2/report/_INCLUDES/main/: option5.tex  task.tex  titlePage.tex
lab2/src/option5/src/: main.cpp
lab3/rep/_STYLES/: title_variables.sty
lab3/report/: Makefile
lab3/src/option1/: CMakeLists.txt
lab3/src/option1/src/: main.cpp  main.hpp
lab3/src/option1/src/Person/: Person.cpp  Person.drawio  Person.hpp
lab3/src/option1/src/Person/HeadOfDepartment/: HeadOfDepartment.cpp  HeadOfDepartment.hpp
lab3/src/option1/src/Person/Student/: Student.cpp  Student.hpp
lab3/src/option1/src/Person/Teacher/: Teacher.cpp  Teacher.hpp
lab4/rep/_STYLES/: title_variables.sty
lab4/report/: Makefile  ООТПиСП_ПО-4_Галанин_лаб4.tex
lab4/report/_STYLES/: title_variables.sty
lab4/src/option5/: README.md
lab5/rep/_STYLES/: title_variables.sty
lab6/rep/_STYLES/: title_variables.sty
lab7/rep/_STYLES/: title_variables.sty
lab7/report/: Makefile
lab7/report/_STYLES/: title_variables.sty
(+33 files in other folders)
